app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  .scroll-snap {
    overflow-y: scroll;
    scroll-snap-type: y mandatory;
    scroll-behavior: smooth;
    width: 100vw;
  }

  p {
    @apply text-sm sm:text-[15px] text-zinc-800 dark:text-zinc-100 leading-[28px] sm:leading-[28px] mb-10;
  }

  strong {
    @apply text-sm sm:text-[15px] text-zinc-800 dark:text-zinc-100;
  }

  h3 {
    @apply text-zinc-800 dark:text-zinc-100 -tracking-wide block text-xl font-semibold;
  }

  #article ul {
    @apply list-disc;
  }

  #article li {
    @apply flex before:content-['-_'] items-center font-bold text-cyan-500;
  }

  #article li div {
    @apply ml-2 text-sm sm:text-[15px] text-zinc-800 dark:text-zinc-100 leading-[28px] sm:leading-[28px] font-normal;
  }

  code {
    @apply text-zinc-800 dark:text-zinc-100 font-serif text-[13px] font-normal p-1 bg-zinc-100 dark:bg-zinc-800 overflow-x-visible;
  }

  a {
    @apply text-blue-500;
  }

  blockquote {
    @apply border-l-8 border-zinc-100 dark:border-zinc-700/50 p-5;
  }

  blockquote, p {
    @apply text-sm sm:text-[15px] text-zinc-800 dark:text-zinc-100 leading-[28px] sm:leading-[28px] mb-10;
  }

  pre {
    @apply font-serif bg-zinc-100 dark:bg-zinc-800 text-[13px] px-5 py-8 rounded-md mb-5;
  }
}

